[package]
name = "shelly"
version = "0.1.0"
authors = ["Oscar Granada <oscar.andres.granada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8.0"
rustyline = "^5.0.2"
chrono = "^0.4.7"
chrono-humanize = "^0.0.11"
